--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/*::before and ::after pseudo-elements allow you to add content to
+/*::before and ::after pseudo-elements allow you to add content as well
  a specific part of an element you have selected in a CSS rule.EG links Emoji*/
 *,
 *::before
