Update style.css, includes new versions iPhones 15 and up operating systems IOS18 beta

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ body {
     margin-bottom: 130px;
 }
 
-/* this version is made to work on Iphone !2 Pro(even thought its need to be polish */
+/* this version is made to work on iPhone 12 and higher operating g system IOS including IOS beta 18*/
 
 @media only screen and (max-width: 400px){
 
